<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="9dp"
        android:text="@string/tempChoose"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="199dp" />

    <TextView
        android:id="@+id/lblInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="38dp"
        android:text="@string/enterTemp"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="199dp" />

    <EditText
        android:id="@+id/txtInputTemp"
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="85dp"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="199dp"
        android:inputType="number" />


    <RadioGroup
        android:id="@+id/tempGroup"
        android:layout_width="207dp"
        android:layout_height="133dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="138dp"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="49dp">

        <RadioButton
            android:id="@+id/btnDegF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degFah" />

        <RadioButton
            android:id="@+id/btnDegC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degCel" />

        <RadioButton
            android:id="@+id/btnDegK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degKel" />
    </RadioGroup>

    <TextView
        android:id="@+id/lblOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="272dp"
        android:text=""
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="199dp" />

    <Button
        android:id="@+id/btnConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="323dp"
        android:text="@string/convert"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="257dp" />

    <TextView
        android:id="@+id/lblOutputDegF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="387dp"
        android:text=""
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="199dp" />

    <TextView
        android:id="@+id/lblOutputDegC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="406dp"
        android:text=""
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="199dp" />

    <TextView
        android:id="@+id/lblOutputDegK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="425dp"
        android:text=""
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="199dp" />

</RelativeLayout>